# serializer version: 1
# name: test_fan_state_snapshot[b6][fan.bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Off',
        'Level 1',
        'Level 2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': None,
    'unique_id': '12345678_fan',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_state_snapshot[b6][fan.bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 50,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 50.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'Level 1',
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Off',
        'Level 1',
        'Level 2',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state_snapshot[ce][fan.bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Normal',
        'Sleep mode',
        'ECO mode',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': None,
    'unique_id': '12345678_fan',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_state_snapshot[ce][fan.bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 43,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 14.285714285714286,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'Normal',
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Normal',
        'Sleep mode',
        'ECO mode',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state_snapshot[fa][fan.bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Normal',
        'Natural',
        'Sleep',
        'Strong',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 59>,
    'translation_key': None,
    'unique_id': '12345678_fan',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_state_snapshot[fa][fan.bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC',
      <FanEntityStateAttribute.OSCILLATING: 'oscillating'>: True,
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 67,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'Normal',
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Normal',
        'Natural',
        'Sleep',
        'Strong',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 59>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_state_snapshot[x40][fan.bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '12345678_fan',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_state_snapshot[x40][fan.bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 50,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 50.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
